Sun Jun 12 02:02:35 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc: We were failing to append "DB" to the
	  path when opening a table for reading - fixed.

Sun Jun 12 02:00:30 BST 2005  Olly Betts <olly@survex.com>

	* testsuite/backendmanager.cc: When a flint database was requested, we
	  were incorrectly creating a quartz database instead - fixed.

Sat Jun 11 17:53:12 BST 2005  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Fix mis-repacking of keys in positionlist
	  table when merging several databases.

Thu Jun 09 01:06:35 BST 2005  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Pass automake options to AM_INIT_AUTOMAKE
	  rather than specifying them in Makefile.am.  This way, the version
	  requirements for autoconf and automake are stated close together.

Mon Jun 06 19:49:36 BST 2005  Olly Betts <olly@survex.com>

	* HACKING: Minor updates to release checklist.

Mon Jun 06 17:44:19 BST 2005  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 0.9.1.

Mon Jun 06 17:28:34 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Describe CC_FOR_BUILD in configure --help output.

Mon Jun 06 16:00:26 BST 2005  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated for 0.9.1.

Fri Jun 03 03:49:33 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_lock.cc,backends/flint/flint_lock.h: Fixed
	  compilation failure on mingw.

Fri Jun 03 01:58:08 BST 2005  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated from tinderbox.

Fri Jun 03 00:46:00 BST 2005  Olly Betts <olly@survex.com>

	* HACKING,NEWS: Snapshot and release tarballs are now bootstrapped
	  using libtool 1.5.18 and automake 1.9.5 (though neither is currently
	  an enforced requirement for bootstrapping).

Thu Jun 02 17:36:36 BST 2005  Olly Betts <olly@survex.com>

	* NEWS: First draft of release notes for 0.9.1.

Thu Jun 02 02:05:47 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_record.cc: Fix get_doccount() to not return