@@ -35,34 +35,54 @@ using namespace std;
 class BitWriter {
     private:
 	string buf;
-	int bits;
+	int n_bits;
 	unsigned int acc;
     public:
-	BitWriter() : bits(0), acc(0) { }
+	BitWriter() : n_bits(0), acc(0) { }
+	void encode(size_t value, size_t outof) {
+	    Assert(value < outof);
+	    // FIXME: look at replacing this with "fls()" (where available) or
+	    // some integer code.
+	    size_t bits = (size_t)ceil(log(double(outof)) / log(2.0));
+	    const size_t spare = (1 << bits) - outof;
+	    if (spare) {
+		const size_t mid_start = (outof - spare) / 2;
+		if (value < mid_start) {
+		    write_bits(value, bits);
+		} else if (value >= mid_start + spare) {
+		    write_bits((value - (mid_start + spare)) | (1 << (bits - 1)), bits);
+		} else {
+		    --bits;
+		    write_bits(value, bits);
+		}
+	    } else {
+		write_bits(value, bits);
+	    }
+	}
 	void write_bits(int data, int count) {
-	    if (count + bits > 32) {
+	    if (count + n_bits > 32) {
 		// We need to write more bits than there's empty room for in
 		// the accumulator.  So we arrange to shift out 8 bits, then
 		// adjust things so we're adding 8 fewer bits.
 		Assert(count <= 32);
-		acc |= (data << bits);
+		acc |= (data << n_bits);
 		buf += char(acc);
 		acc >>= 8;
 		data >>= 8;
 		count -= 8;
 	    }
-	    acc |= (data << bits);
-	    bits += count;
-	    while (bits >= 8) {
+	    acc |= (data << n_bits);
+	    n_bits += count;
+	    while (n_bits >= 8) {
 		buf += char(acc);
 		acc >>= 8;
-		bits -= 8;
+		n_bits -= 8;
 	    }
 	}
 	string & freeze() {
-	    if (bits) {
+	    if (n_bits) {
 		buf += char(acc);
-		bits = 0;
+		n_bits = 0;
 		acc = 0;
 	    }
 	    return buf;
@@ -79,26 +99,8 @@ encode_interpolative(BitWriter & wr, const vector<Xapian::termpos> &pos, int j, 
     // (less some at either end because we must be able to fit
     // all the intervening pos in)
     const size_t outof = pos[k] - pos[j] + j - k + 1;
-    // FIXME: look at replacing this with "fls()" (where available) or
-    // some integer code.
-    size_t bits = (size_t)ceil(log(double(outof)) / log(2.0));
     const size_t lowest = pos[j] + mid - j;
-    const size_t spare = (1 << bits) - outof;
-    const size_t mid_start = lowest + (outof - spare) / 2;
-    Assert(pos[mid] >= lowest);
-    Assert(pos[mid] < lowest + outof);
-    if (spare) {
-	if (pos[mid] < mid_start) {
-	    wr.write_bits(pos[mid] - lowest, bits);
-	} else if (pos[mid] >= mid_start + spare) {
-	    wr.write_bits((pos[mid] - (mid_start + spare)) | (1 << (bits - 1)), bits);
-	} else {
-	    --bits;
-	    wr.write_bits(pos[mid] - lowest, bits);
-	}
-    } else {
-	wr.write_bits(pos[mid] - lowest, bits);
-    }
+    wr.encode(pos[mid] - lowest, outof);
     encode_interpolative(wr, pos, j, mid);
     encode_interpolative(wr, pos, mid, k);
 }
@@ -107,10 +109,26 @@ class BitReader {
     private:
 	string buf;
 	size_t idx;
-	int bits;
+	int n_bits;
 	unsigned int acc;
     public:
-	BitReader(const string &buf_) : buf(buf_), idx(0), bits(0), acc(0) { }
+	BitReader(const string &buf_) : buf(buf_), idx(0), n_bits(0), acc(0) { }
+	Xapian::termpos decode(Xapian::termpos outof) {
+	    size_t bits = (size_t)ceil(log(double(outof)) / log(2.0));
+	    const size_t spare = (1 << bits) - outof;
+	    const size_t mid_start = (outof - spare) / 2;
+	    Xapian::termpos p;
+	    if (spare) {
+		p = read_bits(bits - 1);
+		if (p < mid_start) {
+		    if (read_bits(1)) p += mid_start + spare;
+		}
+	    } else {
+		p = read_bits(bits);
+	    }
+	    Assert(p < outof);
+	    return p;
+	}
 	unsigned int read_bits(int count) {
 	    unsigned int result;
 	    if (count > 25) {
@@ -123,14 +141,14 @@ class BitReader {
 		result = read_bits(16);
 		return result | (read_bits(count - 16) << 16);
 	    }
-	    while (bits < count) {
+	    while (n_bits < count) {
 		Assert(idx < buf.size());
-		acc |= static_cast<unsigned char>(buf[idx++]) << bits;
-		bits += 8;
+		acc |= static_cast<unsigned char>(buf[idx++]) << n_bits;
+		n_bits += 8;
 	    }
 	    result = acc & ((1u << count) - 1);
 	    acc >>= count;
-	    bits -= count;
+	    n_bits -= count;
 	    return result;
 	}
 	// Check all the data has been read.  Because it'll be zero padded
@@ -138,7 +156,7 @@ class BitReader {
 	// there's less than a byte left and that all remaining bits are
 	// zero.
 	bool check_all_gone() const {
-	    return (idx == buf.size() && bits < 7 && acc == 0);
+	    return (idx == buf.size() && n_bits < 7 && acc == 0);
 	}
 };
 
@@ -146,30 +164,13 @@ static void
 decode_interpolative(BitReader & rd, vector<Xapian::termpos> & pos, int j, int k)
 {
     if (j + 1 >= k) return;
-    
+
     const size_t mid = (j + k) / 2;
-    // Encode one out of (pos[k] - pos[j] + 1) values
+    // Decode one out of (pos[k] - pos[j] + 1) values
     // (less some at either end because we must be able to fit
     // all the intervening pos in)
     const size_t outof = pos[k] - pos[j] + j - k + 1;
-    size_t bits = (size_t)ceil(log(double(outof)) / log(2.0));
-    const size_t lowest = pos[j] + mid - j;
-    const size_t spare = (1 << bits) - outof;
-    const size_t mid_start = lowest + (outof - spare) / 2;
-    if (spare) {
-	Xapian::termpos p = rd.read_bits(bits - 1);
-	p += lowest;
-	if (p < mid_start) {
-	    if (rd.read_bits(1)) p += mid_start - lowest + spare;
-	    pos[mid] = p;
-	} else {
-	    pos[mid] = p;
-	}
-    } else {
-	pos[mid] = lowest + rd.read_bits(bits);
-    }
-    Assert(pos[mid] >= lowest);
-    Assert(pos[mid] < lowest + outof);
+    pos[mid] = rd.decode(outof) + (pos[j] + mid - j);
     decode_interpolative(rd, pos, j, mid);
     decode_interpolative(rd, pos, mid, k);
 }
@@ -201,10 +202,13 @@ FlintPositionListTable::set_positionlist(Xapian::docid did,
     }
 
     BitWriter wr;
-    string list_size = pack_uint(poscopy.size());
-    for (size_t i = 0; i < list_size.size(); ++i) {
-	wr.write_bits(list_size[i], 8);
+    string s = pack_uint(poscopy.back());
+    for (size_t i = 0; i < s.size(); ++i) {
+	wr.write_bits(s[i], 8);
     }
+
+    wr.encode(poscopy[0], poscopy.back());
+    wr.encode(poscopy.size() - 2, poscopy.back() - poscopy[0]);
     encode_interpolative(wr, poscopy, 0, poscopy.size() - 1);
     add(key, wr.freeze());
 }
@@ -230,27 +234,25 @@ FlintPositionList::read_data(const FlintTable * table, Xapian::docid did,
 
     const char * pos = data.data();
     const char * end = pos + data.size();
-    Xapian::termpos positions_size;
-    if (!unpack_uint(&pos, end, &positions_size)) {
+    Xapian::termpos pos_last;
+    if (!unpack_uint(&pos, end, &pos_last)) {
 	throw Xapian::DatabaseCorruptError("Position list data corrupt");
     }
     if (pos == end) {
 	// Special case for single entry position list.
-	positions.push_back(positions_size);
+	positions.push_back(pos_last);
 	current_pos = positions.begin();
 	return;
-    }
-    positions.resize(positions_size);
-    if (!unpack_uint(&pos, end, &positions[0])) {
-	throw Xapian::DatabaseCorruptError("Position list data corrupt");
-    }
-    if (!unpack_uint(&pos, end, &positions.back())) {
-	throw Xapian::DatabaseCorruptError("Position list data corrupt");
     }
     BitReader rd(data);
     // Skip the header we just read.
     (void)rd.read_bits(8 * (pos - data.data()));
-    decode_interpolative(rd, positions, 0, positions_size - 1);
+    Xapian::termpos pos_first = rd.decode(pos_last);
+    Xapian::termpos pos_size = rd.decode(pos_last - pos_first) + 2;
+    positions.resize(pos_size);
+    positions[0] = pos_first;
+    positions.back() = pos_last;
+    decode_interpolative(rd, positions, 0, pos_size - 1);
 
     current_pos = positions.begin();
 }
@@ -274,11 +276,11 @@ void
 FlintPositionList::next()
 {
     DEBUGCALL(DB, void, "FlintPositionList::next", "");
-    Assert(!at_end());
 
     if (!have_started) {
 	have_started = true;
     } else {
+	Assert(!at_end());
 	++current_pos;
     }
 }
